--- a/web/static/global.css
+++ b/web/static/global.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -6,11 +7,12 @@ html, body {
 
 body {
 	color: #fff;
- background-color: #343434;
+	background-color: #343434;
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
+		'Helvetica Neue', sans-serif;
 }
 
 a {
@@ -21,7 +23,10 @@ label {
 	display: block;
 }
 
-input, button, select, textarea {
+input,
+button,
+select,
+textarea {
 	font-family: inherit;
 	font-size: inherit;
 	-webkit-padding: 0.4em 0;
@@ -38,7 +43,7 @@ input:disabled {
 
 button {
 	color: #fff;
-	background-color: #EE7123;
+	background-color: #ee7123;
 	outline: none;
 }
 
