--- a/web/static/global.css
+++ b/web/static/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
+
 html,
 body {
 	position: relative;
@@ -9,10 +11,9 @@ body {
 	color: #fff;
 	background-color: #343434;
 	margin: 0;
-	padding: 8px;
+	padding: 0px;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell,
-		'Helvetica Neue', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -42,8 +43,6 @@ input:disabled {
 }
 
 button {
-	color: #fff;
-	background-color: #ee7123;
 	outline: none;
 }
 
